# Tec-Python

./: pyproject.toml
API/: .env  alembic.ini  main.py  pyproject.toml
API/alembic/: env.py
API/alembic/versions/: 1ac1b8699d98_new_field_cep.py  4be7e89699cd_add_new_tables.py  925254e8968e_add_fields.py  b8b231b40854_rename_field.py  f1e20c8acefe_update_infos_tables.py  f5aa74eae413_new_fieds_orphanages.py
API/app/: __init__.py
API/app/clients/: __init__.py  viacep_client.py
API/app/crud/: __init__.py  associate_crud.py  dependent_crud.py  donations_crud.py  orphanages_crud.py
API/app/database/: __init__.py  db_config.py
API/app/exceptions/: __init__.py
API/app/routes/: __init__.py  associate_router.py  dependent_router.py  donations_router.py  orphanages_router.py
API/app/schemas/: __init__.py  associate_schema.py  dependent_schema.py  donations_schema.py  orphanages_schema.py
API/app/services/: __init__.py  associate_service.py  dependent_service.py  donations_service.py  orphanages_service.py
API/docs/: Readme.md
API/tests/: conftest.py  test_dependent_crud.py  test_donations_crud.py  test_orphanages_crud.py
IA/: main.py  pyproject.toml
IA/app/: __init__.py
IA/app/data/: Base_Clientes_Teste.xlsx  (+2 more)
IA/docs/: readme.md
IA/tests/: test_churn_analysis.py  test_clustering.py  test_create_files.py  test_engineering.py  test_prediction.py  test_read_files.py  test_retention.py
RPA/: main.py  pyproject.toml
RPA/bus_routes_scraper/: __init__.py
RPA/docs/: readme.md
RPA/tests/: test_bus_routes.py  test_create_files.py  test_read_files.py
(+25 files in other folders)
