[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jefferson Junior <jeffersonjuniorcwb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pyodbc = "^5.2.0"
pytest = "^8.3.4"
pydantic = "^2.10.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
