[tool.poetry]
name = "ia"
version = "0.1.0"
description = ""
authors = ["Jefferson Junior <jeffersonjuniorcwb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
