[tool.poetry]
name = "rpa"
version = "0.1.0"
description = ""
authors = ["Jefferson Junior <jeffersonjuniorcwb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
